fix: spacing on index page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -113,30 +113,14 @@ section {
   margin-bottom: 10rem;
 }
 
+.index-section {
+  min-height: 60vh;
+}
+
 .section-content {
   max-width: 1200px;
   margin: 0 auto;
-}
-
-@media screen and (max-width: 768px) {
-  /* Adjust padding and font size for smaller screens */
-  section {
-    padding: 10px;
-  }
-  
-  /* Modify the layout for smaller screens */
-  .section-content {
-    padding: 10px;
-  }
-}
-
-
-header {
-  top: 0;
-  width: 100%;
-  position: absolute;
-  display: flex;
-  justify-content: center;
+  padding: 0 0.5rem;
 }
 
 main {
@@ -158,7 +142,7 @@ main {
 
   @media screen and (min-width: 1024px) {
     main {
-      padding-top: 10rem;
+      padding-top: 6rem;
     }
   }
 
